fix: make sure scrollbar gutter is stable

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -23,4 +23,8 @@
 		--input: 229 231 235; /* gray-200 */
 		--divider: 209 213 219; /* gray-300 */
 	}
+
+	html {
+		scrollbar-gutter: stable;
+	}
 }
